--- a/CV/Index.html
+++ b/CV/Index.html
@@ -20,6 +20,7 @@
                  <div>                  
                     <dl>
                         <dt style="font-size:15px;margin-bottom:20px;margin-top:35">Alumna Ingeniería en Informática</dt>
+                        <dd> Instituto AIEP</dd>
                         <dd> Año 2018 - Cursando</dd>
                     </dl>
                 </div>    
